--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -243,7 +243,7 @@
                     <img src="img/logic-chart.jpg" alt=""/ style="padding-bottom: 26px; max-width: 692px">
                   </div>
 
-                  <p class="JE-description" style="">Designing the chatbot logic and understanding each decision along the employee’s "path to an answer"x was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
+                  <p class="JE-description" style="">Designing the chatbot logic and understanding each decision along the employee’s "path to an answer" was easy enough although we didn’t have a database full of all the potential answers. We only had a set of 1:1 questions and answers.</p>
 
                   <p class="JE-description" style="">Work began with the AI team and our data scientist, we decided to track the interactions to help train the engine. Although it became apparent that this would take time and the feature needed to be ready for the next release cycle.</p>
 
@@ -256,7 +256,7 @@
                     <img src="img/search-results.png" style="max-width: 320px; max-height: 548px;">
                   </div>
 
-                  <p class="JE-description" style="">The initial version displayed a series of well-timed ellipses animations to mimic “system processing time.” This gave the employee the feeling that the system was thinking about their question. By asking simple A or B questions and providing potential topics to choose from, the employee’s actions helped train the AI engine.</p>                  
+                  <p class="JE-description" style="">The initial version displayed a series of well-timed ellipses animations to mimic “system processing time.” This gave the employee the feeling that the system was thinking about their question. By folling-up with "related results" and providing potential topics to choose from, the employee’s actions helped train the AI engine.</p>                  
                 </div>
               </div>
 
