add product image, refine look

--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -204,7 +204,8 @@
                 </div>
 
                   <div class="CS-text">We found that employees valued discovering immediate information. According to a poll, 18% of employees were more likely to read company news, and 82% of employees were more likely to read timely information about their benefits.</div>
-                  <div class="CS-text">We also found that HR professionals spend a majority of their time answering repetitive questions or writing detailed emails to employees about their individual benefits. 23 out of 25 HR professionals said that repetitive task-oriented questions accounted for 40% or more of their daily workload.</div>
+
+                  <div class="CS-text" style="padding-top: 20px;">We also found that HR professionals spend a majority of their time answering repetitive questions or writing detailed emails to employees about their individual benefits. 23 out of 25 HR professionals said that repetitive task-oriented questions accounted for 40% or more of their daily workload.</div>
                 </div>
               </div>
 
@@ -218,10 +219,10 @@
               </div>
 
 
-              <div class="grey-block">
-                <div class="text-pod">
+              <div class="design-block">
+                <div class="text-pod" style="color: #FFF;">
                   <div class="small-head">DESIGN</div>
-                  <div class="medium-head"">Striking a Balance: Push vs. Pull</div>
+                  <div class="medium-head">Striking a Balance: Push vs. Pull</div>
                   <div class="CS-text">Data shows up to 60% of users opt-out of push notifications. Silicon Valley investor Andrew Chen in his blog discusses notifications and the delicate relationship with the user, “Once your users begin receiving push notifications, it is critical that you respect this incredibly personal communication channel. By only sending hyper-targeted, personalized push messages that actually add value, you can ensure that your users don’t later opt-out of push…”</div>
                   <div class="inline-image">
                     <img src="img/interaction-model-sketch-small2.png">
@@ -231,11 +232,14 @@
                     <img src="img/interaction-guide.png">
                   </div>
                   <div class="CS-text">By building metrics into an interaction model, employees could feel in-control by quickly dismissing notifications directly in the timeline. The gesture pattern design also considered the recording of “read” actions and “dismissed” actions which lead to the first set of analytics. With these primary metrics, we were able to begin building-in tips and best practices to help guide employer publishing.</div>
+                  <div class="inline-image">
+                    <img src="img/EC-Final-Screens.png">
+                  </div>
                 </div>
               </div>
 
 
-              <div class="white-block">
+              <div class="grey-block">
                 <div class="text-pod">
                   <div class="medium-head"">Personal Information from a Impersonal Bot</div>
                   <div class="CS-text">Employers still needed a useful tool to communicate news, events, and policy but in a way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</div>
@@ -251,17 +255,17 @@
                     </video>
                     <img src="img/search-results.png" style="max-width: 320px; max-height: 548px;">
                   </div>
-                  <div class="CS-text">The initial version displayed a series of well-timed ellipses animations to mimic “system processing time.” This gave the employee the feeling that the system was thinking about their question. By following-up with "related results" and providing potential topics to choose from, the employee’s actions helped train the AI engine.</div>                
+                  <div class="CS-text">The initial version displayed a series of well-timed ellipses animations to mimic “system processing time.” This gave the employee the feeling that the system was thinking about their question. By following-up with "related results" and providing potential topics to choose from, the employee’s actions helped train the AI engine.</div>
                 </div>
               </div>
 
 
-              <div class="grey-block">
+              <div class="impact-block">
                 <div class="text-pod">
-                  <div class="small-head">IMPACT</div>
-                  <div class="medium-stat">Opt-out rates for news and event publications dropped <span style="font-weight: 800;">32%</span> with new employee users</div>
-                  <div class="medium-stat">Enterprise sales increased <span style="font-weight: 800;">460%</span> in 1.5 years</div>
-                  <div class="medium-stat">Employees were satisfied with the answers they found <span style="font-weight: 800;">96.4%</span> of the time</div>
+                  <div class="small-head-white">IMPACT</div>
+                  <div class="medium-stat-white">Opt-out rates for news and event publications dropped <span style="font-weight: 800;">32%</span> with new employee users</div>
+                  <div class="medium-stat-white">Enterprise sales increased <span style="font-weight: 800;">460%</span> in 1.5 years</div>
+                  <div class="medium-stat-white">Employees were satisfied with the answers they found <span style="font-weight: 800;">96.4%</span> of the time</div>
                 </div>
               </div>
 <!-- center-cut div -->
