--- a/work/ec/index.html
+++ b/work/ec/index.html
@@ -241,6 +241,7 @@
 
               <div class="grey-block">
                 <div class="text-pod">
+                  <div class="small-head">DESIGN</div>
                   <div class="medium-head"">Personal Information from a Impersonal Bot</div>
                   <div class="CS-text">Employers still needed a useful tool to communicate news, events, and policy but in a way that would strike a balance with what employees value without creating another HR bullhorn like email blast campaigns that had been ignored in the past.</div>
                   <div class="inline-image">
